--- a/src/components/Elements/navbar/NavDropdown/navDropdown.module.css
+++ b/src/components/Elements/navbar/NavDropdown/navDropdown.module.css
@@ -1,6 +1,7 @@
 .navLinksContainer {
 	display: flex;
 	flex-direction: column;
+	gap: 0.5rem;
 }
 .navbar li {
 	overflow: hidden;
