--- a/src/components/Elements/navbar/Navigation/navigation.module.css
+++ b/src/components/Elements/navbar/Navigation/navigation.module.css
@@ -13,7 +13,7 @@
 	font-weight: 400;
 	font-size: 2em;
 	line-height: 1;
-	margin-right: 6rem;
+	margin-right: clamp(1em, 10vw, 10em);
 }
 
 /* name */
@@ -22,6 +22,6 @@
 }
 .header p > span {
 	display: block;
-	font-size: 1.2rem;
+	font-size: 1.2em;
 	line-height: 1.1;
 }
